--- a/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
+++ b/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,9 +16,38 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pog-pC-kWG">
+                    <rect key="frame" x="16" y="90" width="343" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="VnE-h0-4m3"/>
+                    </constraints>
+                    <state key="normal" title="show a picker view"/>
+                    <connections>
+                        <action selector="pickerButtonPressed:" destination="-1" eventType="touchUpInside" id="udE-jU-vbW"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVQ-WE-JG7">
+                    <rect key="frame" x="16" y="142" width="343" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="PNa-Xs-Rly"/>
+                    </constraints>
+                    <state key="normal" title="show a date picker view"/>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="OVQ-WE-JG7" secondAttribute="trailing" constant="16" id="EtV-g0-6eq"/>
+                <constraint firstItem="Pog-pC-kWG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="J4c-AH-tEN"/>
+                <constraint firstAttribute="trailing" secondItem="Pog-pC-kWG" secondAttribute="trailing" constant="16" id="Vj0-Wq-6yC"/>
+                <constraint firstItem="OVQ-WE-JG7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="kzx-6a-esZ"/>
+                <constraint firstItem="Pog-pC-kWG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="90" id="uEe-he-TNF"/>
+                <constraint firstItem="OVQ-WE-JG7" firstAttribute="top" secondItem="Pog-pC-kWG" secondAttribute="bottom" constant="8" id="wzI-ul-Cko"/>
+            </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
         </view>
     </objects>
 </document>
