--- a/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
+++ b/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
@@ -35,6 +35,9 @@
                         <constraint firstAttribute="height" constant="44" id="PNa-Xs-Rly"/>
                     </constraints>
                     <state key="normal" title="show a date picker view"/>
+                    <connections>
+                        <action selector="datepickerButtonPressed:" destination="-1" eventType="touchUpInside" id="cGn-xE-qsa"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
