[Modify] demo with drop down menu

--- a/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
+++ b/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -49,18 +49,31 @@
                         <action selector="showDoubleActionPopView:" destination="-1" eventType="touchUpInside" id="nHK-Ia-KHB"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xLn-TE-O5q">
+                    <rect key="frame" x="8" y="260" width="359" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="SL8-Xw-ALb"/>
+                    </constraints>
+                    <state key="normal" title="drop down menu"/>
+                    <connections>
+                        <action selector="dropdownButtonPressed:" destination="-1" eventType="touchUpInside" id="LoQ-Sm-JHn"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="gQX-5C-O6s" firstAttribute="top" secondItem="u4Z-kI-k5b" secondAttribute="bottom" constant="10" id="1Ur-VQ-B6U"/>
+                <constraint firstItem="xLn-TE-O5q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Alq-Wh-obD"/>
                 <constraint firstAttribute="trailing" secondItem="u4Z-kI-k5b" secondAttribute="trailing" constant="10" id="GON-IG-tvE"/>
                 <constraint firstItem="BR6-eG-xJw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="Ltq-y7-7OE"/>
                 <constraint firstAttribute="trailing" secondItem="gQX-5C-O6s" secondAttribute="trailing" constant="10" id="XCE-AC-kJf"/>
                 <constraint firstItem="u4Z-kI-k5b" firstAttribute="top" secondItem="BR6-eG-xJw" secondAttribute="bottom" constant="10" id="Yv1-Gi-h6c"/>
+                <constraint firstItem="xLn-TE-O5q" firstAttribute="top" secondItem="gQX-5C-O6s" secondAttribute="bottom" constant="8" id="Yvl-Kn-dl8"/>
                 <constraint firstItem="u4Z-kI-k5b" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="aG7-B4-dT8"/>
                 <constraint firstAttribute="trailing" secondItem="BR6-eG-xJw" secondAttribute="trailing" constant="16" id="dcZ-le-ms0"/>
                 <constraint firstItem="gQX-5C-O6s" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="fhV-c0-NJU"/>
                 <constraint firstItem="BR6-eG-xJw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="iIV-IP-dmc"/>
+                <constraint firstAttribute="trailing" secondItem="xLn-TE-O5q" secondAttribute="trailing" constant="8" id="q5D-Vy-lyS"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
