--- a/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
+++ b/Example/LYPopView/_scene/tab_picker/TabPickerViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,13 +39,26 @@
                         <action selector="datepickerButtonPressed:" destination="-1" eventType="touchUpInside" id="cGn-xE-qsa"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udS-1Q-xK2">
+                    <rect key="frame" x="16" y="202" width="343" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="Ab3-n4-Vh6"/>
+                    </constraints>
+                    <state key="normal" title="Show Date Picker"/>
+                    <connections>
+                        <action selector="showDatePicker:" destination="-1" eventType="touchUpInside" id="Ehd-Hi-PmS"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="udS-1Q-xK2" firstAttribute="top" secondItem="OVQ-WE-JG7" secondAttribute="bottom" constant="16" id="BOe-Oa-PUU"/>
                 <constraint firstAttribute="trailing" secondItem="OVQ-WE-JG7" secondAttribute="trailing" constant="16" id="EtV-g0-6eq"/>
                 <constraint firstItem="Pog-pC-kWG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="J4c-AH-tEN"/>
                 <constraint firstAttribute="trailing" secondItem="Pog-pC-kWG" secondAttribute="trailing" constant="16" id="Vj0-Wq-6yC"/>
+                <constraint firstAttribute="trailing" secondItem="udS-1Q-xK2" secondAttribute="trailing" constant="16" id="Wd5-LA-xTC"/>
                 <constraint firstItem="OVQ-WE-JG7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="kzx-6a-esZ"/>
+                <constraint firstItem="udS-1Q-xK2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="rMi-Oq-9CW"/>
                 <constraint firstItem="Pog-pC-kWG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="90" id="uEe-he-TNF"/>
                 <constraint firstItem="OVQ-WE-JG7" firstAttribute="top" secondItem="Pog-pC-kWG" secondAttribute="bottom" constant="8" id="wzI-ul-Cko"/>
             </constraints>
