--- a/LYPopView/Classes/dropdown/LYDropDownCell.xib
+++ b/LYPopView/Classes/dropdown/LYDropDownCell.xib
@@ -31,11 +31,28 @@
                             <constraint firstAttribute="height" constant="24" id="SCF-YI-chg"/>
                         </constraints>
                     </imageView>
+                    <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pwf-zY-bNq" userLabel="bottom line">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="n9K-QZ-4U0">
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="preciseConstant">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </constraint>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Pwf-zY-bNq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="3w4-0r-f5s"/>
                     <constraint firstItem="4I0-JF-V2I" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8I1-GM-CpT"/>
                     <constraint firstItem="NQI-ls-ys1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="WYc-X1-R0c"/>
                     <constraint firstAttribute="trailing" secondItem="NQI-ls-ys1" secondAttribute="trailing" constant="10" id="ZJd-Nl-r9r"/>
+                    <constraint firstAttribute="trailing" secondItem="Pwf-zY-bNq" secondAttribute="trailing" id="d7I-91-aGB"/>
+                    <constraint firstAttribute="bottom" secondItem="Pwf-zY-bNq" secondAttribute="bottom" id="fSe-6x-DDx"/>
                     <constraint firstItem="4I0-JF-V2I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="l5R-ig-yd7"/>
                 </constraints>
             </tableViewCellContentView>
