--- a/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
+++ b/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -59,6 +59,16 @@
                         <action selector="dropdownButtonPressed:" destination="-1" eventType="touchUpInside" id="LoQ-Sm-JHn"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cw2-0T-6EF">
+                    <rect key="frame" x="8" y="312" width="359" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="5nP-Ei-Avh"/>
+                    </constraints>
+                    <state key="normal" title="drop down section menu"/>
+                    <connections>
+                        <action selector="dropdownSectionButtonPressed:" destination="-1" eventType="touchUpInside" id="yJa-B9-YN9"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -66,13 +76,16 @@
                 <constraint firstItem="xLn-TE-O5q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Alq-Wh-obD"/>
                 <constraint firstAttribute="trailing" secondItem="u4Z-kI-k5b" secondAttribute="trailing" constant="10" id="GON-IG-tvE"/>
                 <constraint firstItem="BR6-eG-xJw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="Ltq-y7-7OE"/>
+                <constraint firstItem="cw2-0T-6EF" firstAttribute="top" secondItem="xLn-TE-O5q" secondAttribute="bottom" constant="8" id="Poo-cp-vqQ"/>
                 <constraint firstAttribute="trailing" secondItem="gQX-5C-O6s" secondAttribute="trailing" constant="10" id="XCE-AC-kJf"/>
+                <constraint firstItem="cw2-0T-6EF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="XhA-tN-lpr"/>
                 <constraint firstItem="u4Z-kI-k5b" firstAttribute="top" secondItem="BR6-eG-xJw" secondAttribute="bottom" constant="10" id="Yv1-Gi-h6c"/>
                 <constraint firstItem="xLn-TE-O5q" firstAttribute="top" secondItem="gQX-5C-O6s" secondAttribute="bottom" constant="8" id="Yvl-Kn-dl8"/>
                 <constraint firstItem="u4Z-kI-k5b" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="aG7-B4-dT8"/>
                 <constraint firstAttribute="trailing" secondItem="BR6-eG-xJw" secondAttribute="trailing" constant="16" id="dcZ-le-ms0"/>
                 <constraint firstItem="gQX-5C-O6s" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="fhV-c0-NJU"/>
                 <constraint firstItem="BR6-eG-xJw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="iIV-IP-dmc"/>
+                <constraint firstAttribute="trailing" secondItem="cw2-0T-6EF" secondAttribute="trailing" constant="8" id="l97-Jn-fTe"/>
                 <constraint firstAttribute="trailing" secondItem="xLn-TE-O5q" secondAttribute="trailing" constant="8" id="q5D-Vy-lyS"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
