--- a/Example/LYPopView/_scene/tab_other/TabOtherViewController.xib
+++ b/Example/LYPopView/_scene/tab_other/TabOtherViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,6 +39,16 @@
                         <action selector="popImagePickerActionSheetTapped:" destination="-1" eventType="touchUpInside" id="F7B-1w-7II"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJ3-Xa-YyC">
+                    <rect key="frame" x="16" y="188" width="343" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="RAf-1p-CGc"/>
+                    </constraints>
+                    <state key="normal" title="pop hover base view"/>
+                    <connections>
+                        <action selector="popHoverViewAction:" destination="-1" eventType="touchUpInside" id="J2o-nM-5d1"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -46,8 +56,11 @@
                 <constraint firstItem="Miq-60-9rf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="2mG-ud-9w4"/>
                 <constraint firstItem="KiX-fJ-0IM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="CJe-Jg-bVa"/>
                 <constraint firstAttribute="trailing" secondItem="Miq-60-9rf" secondAttribute="trailing" constant="12" id="Cir-ir-xP4"/>
+                <constraint firstItem="ZJ3-Xa-YyC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="Gl0-Hf-29Y"/>
+                <constraint firstAttribute="trailing" secondItem="ZJ3-Xa-YyC" secondAttribute="trailing" constant="16" id="IuY-lu-FDa"/>
                 <constraint firstItem="KiX-fJ-0IM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="U7U-oh-SxE"/>
                 <constraint firstAttribute="trailing" secondItem="KiX-fJ-0IM" secondAttribute="trailing" constant="16" id="bT1-0H-E8N"/>
+                <constraint firstItem="ZJ3-Xa-YyC" firstAttribute="top" secondItem="Miq-60-9rf" secondAttribute="bottom" constant="16" id="equ-Yo-cyK"/>
             </constraints>
         </view>
     </objects>
